2002-01-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.[ch] (gda_connection_new): use the GDA dsn
	name, not the connection string.
	(gda_connection_get_dsn): renamed from gda_connection_get_string

	* libgda/gda-client.c: adapted to changes in gda-connection.*

2002-01-25  Cleber Rodrigues <cleberrrjr@bol.com.br>

	* libgda/gda-connection.* 
	(gda_connection_is_open): implemented

2002-01-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* report/libgda-report/gda-report-document.c
	(gda_report_document_new_from_string): implemented basic parser

	* libgda/gda-util.c (gda_file_load): implemented

2002-01-23  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/libgda-sections.txt:
	* doc/C/tmpl/gda-command.sgml:
	* doc/C/tmpl/gda-connection.sgml:
	* doc/C/tmpl/gda-recordset.sgml:
	* doc/C/tmpl/gda-report-datasource.sgml:
	* doc/C/tmpl/gda-row.sgml:
	* doc/C/tmpl/gda-server-recordset-model.sgml:
	* doc/C/tmpl/gda-server-recordset.sgml:
	* doc/C/tmpl/gda-xql-utils.sgml:
	* libgda/gda-recordset.c: added documentation for
	gda_recordset_get_command_t*().

2002-01-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* data/gda-xml-query.dtd:
	* data/gda-xml-query.xsl: added from stable branch

2002-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/sqlite/*: moved the default provider to this new
	directory, as the SQLite provider is just one more provider.

	* configure.in:
	* providers/Makefile.am: enabled new sqlite directory.

	* libgda/gda-recordset.c (gda_recordset_finalize): check for
	object type before continuing.

2002-01-22  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* idl/GNOME_Database.idl: moved declarations of Command* before
	Recordset. Added getCommandText() and getCommandType() to the
	Recordset interface.

	* libgda/gda-recordset.[ch] (gda_recordset_command_type):
	(gda_recordset_command_text): new functions to retrieve the text and
	type of the query that generated the recordset.
